--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
@@ -7,6 +7,7 @@
 <form class="login-form" action='/login' method="POST">
     <h1 class="login-element">Please login</h1>
     <div class="login-element">User:</div>
+    <input type="hidden" th:name="${_csrf.parameterName}", th:value="${_csrf.token}"/>
     <input class="login-element" type='text' name="foo" value=''>
     <div class="login-element">Password:</div>
     <input class="login-element" type='password' name="bar" value=''>
