--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,7 @@
     <input class="login-element" type='text' name="foo" value=''>
     <div class="login-element">Password:</div>
     <input class="login-element" type='password' name="bar" value=''>
+    <a class="login-element" href="/sign_up">Don't you have an account? Sign up here</a>
     <input class="login-element" type='submit' name="submit" value="submit">
 </form>
 </html>
