--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -9,6 +9,8 @@
     <div class="login-element">Username:</div>
     <input type="hidden" th:name="${_csrf.parameterName}", th:value="${_csrf.token}"/>
     <input class="login-element" type='text' name="username" value=''>
+    <div class="login-element">Email:</div>
+    <input class="login-element" type='email' name="email" value=''>
     <div class="login-element">Password:</div>
     <input class="login-element" type='password' name="password" value=''>
     <input class="login-element" type='submit' name="submit" value="sign up">
