--- a/src/main/resources/templates/user_panel.html
+++ b/src/main/resources/templates/user_panel.html
@@ -7,5 +7,6 @@
 <body>
     <div th:insert="menu.html :: div"></div>
     <h1>User Panel</h1>
+    <h2 th:text="${greetings}"></h2>
 </body>
 </html>
