--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,15 +3,22 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto:wght@400;500&display=swap"
+          rel="stylesheet">
 </head>
-<form class="login-form" action='/login' method="POST">
-    <h1 class="login-element">Please login</h1>
-    <div class="login-element">User:</div>
-    <input type="hidden" th:name="${_csrf.parameterName}", th:value="${_csrf.token}"/>
-    <input class="login-element" type='text' name="foo" value=''>
-    <div class="login-element">Password:</div>
-    <input class="login-element" type='password' name="bar" value=''>
-    <a class="login-element" href="/sign_up">Don't you have an account? Sign up here</a>
-    <input class="login-element" type='submit' name="submit" value="submit">
-</form>
+<div class="form-wrapper">
+    <form class="login-form" action="/login" method='POST'>
+        <h1 class="title login-element">Please login</h1>
+        <div class="text login-element">User:</div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> <input
+            class="input login-element"
+            type='text' name="foo" value=''>
+        <div class="text login-element">Password:</div>
+        <input class="input login-element" type='password' name="bar" value=''>
+        <a class="link login-element" href="/sign_up">Don't have an
+            account? Sign up here</a> <input class="button login-element" name="submit" type="submit" value="submit">
+    </form>
+</div>
 </html>
